--- a/LINQ.Tests/LINQ.Tests.csproj
+++ b/LINQ.Tests/LINQ.Tests.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LINQ.ProductionCode\LINQ.ProductionCode.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
